--- a/bcos-dispatcher/CMakeLists.txt
+++ b/bcos-dispatcher/CMakeLists.txt
@@ -13,4 +13,4 @@ find_package(tbb CONFIG REQUIRED)
 add_library(dispatcher DispatcherImpl.cpp)
 # target_compile_options(dispatcher PRIVATE -Wno-error -Wno-unused-parameter -Wno-variadic-macros -Wno-return-type -Wno-pedantic)
 # add_dependencies(dispatcher bcostars bcos-framework bcos-front)
-# target_link_libraries(dispatcher tarsservant tarsutil Microsoft.GSL::GSL)
+target_link_libraries(dispatcher Microsoft.GSL::GSL)
