--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,8 @@ project(Bcos-Dispatcher)
 
 include(CompilerSettings)
 
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+
 add_subdirectory(bcos-dispatcher)
 
 if(TESTS)
