--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,10 +7,10 @@ hunter_add_package(tbb)
 hunter_add_package(Boost COMPONENTS all)
 
 find_package(Microsoft.GSL CONFIG REQUIRED)
-find_package(Boost CONFIG REQUIRED unit_test_framework)
+find_package(Boost CONFIG REQUIRED unit_test_framework thread)
 find_package(tbb CONFIG REQUIRED)
 
-add_library(testDispatcher testDispatcher.cpp)
+add_executable(testDispatcher testDispatcher.cpp main.cpp)
 target_compile_options(testDispatcher PRIVATE -Wno-error -Wno-unused-parameter -Wno-variadic-macros -Wno-return-type -Wno-pedantic)
 # add_dependencies(dispatcher bcostars bcos-framework bcos-front)
-target_link_libraries(testDispatcher Microsoft.GSL::GSL Boost::unit_test_framework tbb::tbb)
+target_link_libraries(testDispatcher dispatcher libcodecd.a libprotocold.a Microsoft.GSL::GSL Boost::unit_test_framework tbb::tbb Boost::thread)
