--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -14,3 +14,4 @@ add_executable(testDispatcher testDispatcher.cpp main.cpp)
 target_compile_options(testDispatcher PRIVATE -Wno-error -Wno-unused-parameter -Wno-variadic-macros -Wno-return-type -Wno-pedantic)
 # add_dependencies(dispatcher bcostars bcos-framework bcos-front)
 target_link_libraries(testDispatcher dispatcher libcodecd.a libprotocold.a Microsoft.GSL::GSL Boost::unit_test_framework tbb::tbb Boost::thread)
+add_test(testDispatcher testDispatcher)
