--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -22,7 +22,7 @@ jobs:
     strategy:
       matrix:
         # os: [ubuntu-18.04, macos-latest]
-        os: [macos-latest]
+        os: [macos-11]
     steps:
       - uses: actions/checkout@v2
         with:
