--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ include(HunterGate)
 HunterGate(
     URL "https://${URL_BASE}/FISCO-BCOS/hunter/archive/9ea365415828102627dcc933295e25e8feff7d93.tar.gz"
     SHA1 "b40d19ddd9939f557b70c69e45f8744ff17583ba"
-    FILEPATH "${CMAKE_SOURCE_DIR}/hunterConfig.cmake"
+    FILEPATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/config.cmake"
 )
 project(bcos-scheduler VERSION "3.0.0")
 set(VERSION_SUFFIX "")
