--- a/.gitignore
+++ b/.gitignore
@@ -33,8 +33,16 @@
 
 # depencies and config files
 cmake/scripts/**
+cmake/scripts**
 cmake/deps/**
-build/**
+build**
 .clang-format
 .vscode/**
+.idea/**
 .DS_Store
+deps/**
+
+# clangd
+.cache/
+.clangd/
+compile_commands.json
