Fix key locks bug (#30)
* Add set key local every message

* Acquire key lock each execution message

* Update executor & storage interfaces

* Check commit status each executor commit

* Fix commit callback check status

* Add debug log

* Add checkBatch log for check

* Move received set later

* Add multi parallel executor mock

* Fix erase it bug && add parallel test

* Fix unit test core

* Add unit test

* Unlock before execute callback

* Change log level

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,4 @@
-file(GLOB_RECURSE SOURCES "*.cpp" "*.h")
+file(GLOB_RECURSE SOURCES main.cpp testExecutorManager.cpp testKeyLocks.cpp testScheduler.cpp)
 
 # cmake settings
 include(SearchTestCases)
@@ -12,14 +12,9 @@ target_compile_options(${TEST_BINARY_NAME} PRIVATE)
 hunter_add_package(wedpr-crypto)
 hunter_add_package(bcos-tars-protocol)
 hunter_add_package(tarscpp)
-hunter_add_package(bcos-storage)
 find_package(wedpr-crypto CONFIG QUIET REQUIRED)
 find_package(Boost CONFIG QUIET REQUIRED unit_test_framework serialization)
 find_package(bcos-tars-protocol CONFIG QUIET REQUIRED)
 find_package(tarscpp CONFIG QUIET REQUIRED)
-find_package(zstd CONFIG REQUIRED)
-find_package(RocksDB CONFIG REQUIRED)
-find_package(gRPC CONFIG REQUIRED)
-find_package(bcos-storage CONFIG QUIET REQUIRED)
 target_link_libraries(${TEST_BINARY_NAME} ${BCOS_DISPATCHER_TARGET} scheduler bcos-framework::storage bcos-framework::protocol-pb bcos-framework::codec wedpr-crypto::crypto
-Boost::unit_test_framework bcos-tars-protocol::protocol-tars tbb::tbb bcos-storage::bcos-storage)
+Boost::unit_test_framework bcos-tars-protocol::protocol-tars tbb::tbb)
